# odoo-orm

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json  test.py
.github/workflows/: release.yml  test.yml
odoo_orm/: __init__.py  connection.py  errors.py  orm.py
src/odoo_orm/: errors.py  orm.py
tests/: conftest.py  pytest.ini  test_connection.py  test_orm.py
