[project]
name = "odoo-orm"
version = "3.0.0"
description = "A kind of Python ORM for Odoo XML-RPC API inspired by Django ORM."
authors = [
    { name = "mistiru", email = "dev@mistiru.me" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
source = "https://github.com/mistiru/odoo-orm"

[dependency-groups]
dev = [
    "pytest-mock~=3.7",
    "pytest-cov~=4.1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "tutturu",
]
